Propagate storage durability failures